fix friend box margin

--- a/react-app/src/components/Posts/posts.css
+++ b/react-app/src/components/Posts/posts.css
@@ -235,7 +235,8 @@
     flex-wrap: wrap;
     width: 100%;
 
-    justify-content: center;
+    /* justify-content: center; */
+    margin-left: .7rem;
     margin-top: -.9rem;
     /* margin-bottom: .3rem; */
 }
